caller/k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: caller-service
  labels:
    app: caller-service
spec:
  ports:
    - name: http
      port: 9090
      targetPort: 8080
  type: NodePort
  selector:
    app: caller-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caller-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: caller-service
  template:
    metadata:
      name: caller-service
      labels:
        app: caller-service
        version: v1
    spec:
      hostname: caller-service # ?? gerekli mi?
      containers:
        - env:
            - name: POD_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
          image: kerimaksak/caller-service:1.0
          imagePullPolicy: IfNotPresent
          name: caller-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
